Swapped out the old assignment with the new file to be used

--- a/index.html
+++ b/index.html
@@ -3,22 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD130 | Home</title>
+    <title>Document</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="wwr/index.html">White Water Rafting Website</a>
-            <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-            <a href="positioning.html">Positioning Activity</a>
-            <a href="#">Personal Website</a>
-            <a href="#">Personal Siteplan</a>
-        </nav>
-    </header>      
-    <h1>Raphael Allen Martinez</h1>
-    <img src="profile.jpg" alt="Image of me">
-    <p>Hello there! I am Raphael Allen Martinez and I am from the Philippines.</p>
-    <p>I served in the Philippines Olongapo mission from September 30, 2022 to October 10, 2024.</p>
-    <p>I am currently in the freshman focus major with an emphasis in science and technology. I hope to build a career revloving around computers!</p>
+    <h1>Welcome to WDD130 Web Projects</h1>
+    <nav>
+        <a href="wwr/index.html">White Water Rafting Website</a>
+        <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+        <a href="positioning.html">Positioning Activity</a>
+        <a href="#">Personal Website</a>
+        <a href="#">Personal Siteplan</a>
+    </nav>  
+    <p>Raphael Allen Martinez - WDD130</p>
 </body>
 </html>
