changes to the purpose paragraph

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -26,9 +26,9 @@
 
     <h3>Audience</h3>
     <p>This website will be targeted towards:
-        -outdoor enthusiasts that want to experience water activties.
-        -Single adults looking for a good camping venue.
-        -Nature lovers that want to go away from the busy city.
+        outdoor enthusiasts that want to experience water activties, 
+        Single adults looking for a good camping venue, 
+        Nature lovers that want to go away from the busy city.
     </p>
 
     <hr />
