--- a/wwr/index.html
+++ b/wwr/index.html
@@ -61,8 +61,8 @@
             <a href="https://facebook.com">
                 <img src="images/facebook.png" alt="fb icon">
             </a>
-            <a href="https://twitter.com">
-                <img src="images/twitter.png" alt="twitter icon">
+            <a href="https://x.com">
+                <img src="images/x_logo.png" alt="x icon">
             </a>
             <a href="https://instagram.com">
                 <img src="images/instagram.png" alt="instagram icon">
