Added Ice challenge 1 to the home page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
         <a href="positioning.html">Positioning Activity</a>
         <a href="#">Personal Website</a>
         <a href="#">Personal Siteplan</a>
+        <a href="icechallenges/ICE_challenge.html">Ice challenge 1</a>
     </nav>  
+    <img src="profile.jpg" alt="Image of me">
+    <p>Hello there! I am Raphael Allen Martinez and I am from the Philippines.</p>
+    <p>I served in the Philippines Olongapo mission from September 30, 2022 to October 10, 2024.</p>
+    <p>I am currently in the freshman focus major with an emphasis in science and technology. I hope to build a career revloving around computers!</p>
+
     <p>Raphael Allen Martinez - WDD130</p>
 </body>
 </html>
