Added Ice challenge 2

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <a href="#">Personal Website</a>
         <a href="#">Personal Siteplan</a>
         <a href="icechallenges/ICE_challenge.html">Ice challenge 1</a>
+        <a href="icechallenges/ICE_challenge2.html">Ice challenge 2</a>
     </nav>  
     <img src="profile.jpg" alt="Image of me">
     <p>Hello there! I am Raphael Allen Martinez and I am from the Philippines.</p>
