--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
         <a href="positioning.html">Positioning Activity</a>
         <a href="#">Personal Website</a>
-        <a href="#">Personal Siteplan</a>
+        <a href="personal/site-plan-personal.html">Personal Website siteplan</a>
         <a href="icechallenges/ICE_challenge.html">Ice challenge 1</a>
         <a href="icechallenges/ICE_challenge2.html">Ice challenge 2</a>
     </nav>  
