Added content for site plan

--- a/personal/site-plan-personal.html
+++ b/personal/site-plan-personal.html
@@ -124,29 +124,52 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Welcome to my mission journey! This website presents my journey through pictures.
+        A trip down memory lane, I dedicate this page to my friends, family and fellow missionaries.
+
+        some facts:
+        I served from sept. 30,2022 to Oct. 10,2024
+        I had 10 companions
+        I cooked dog for my companion
+        Did alot of service projects
+        My mission areas were extremely hot
+        I got bit by a cat
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img class="image_crop" src="images/home_1.JPG" alt="image for homepage">
+        <img class="image_crop" src="images/home_2.JPG" alt="image for homepage">
 
       </ul>
       <h3>[Page 2]</h3>
       <p>
-        [Written copy for the Page 2 here]
+        My 7 areas in the map!
+        Areas in order: Olongapo, Lubao, Castillejos, Subic, Morong, Cabangan, Masinloc
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img class="image_crop" src="images/Olongapo.png" alt="image for page">
+        <img class="image_crop" src="images/Lubao.png" alt="image for page">
+        <img class="image_crop" src="images/Castillejos.png" alt="image for page">
+        <img class="image_crop" src="images/Subic.png" alt="image for page">
+        <img class="image_crop" src="images/Morong.png" alt="image for page">
+        <img class="image_crop" src="images/Cabangan.png" alt="image for page">
+        <img class="image_crop" src="images/Masinloc.png" alt="image for page">
 
       </ul>
       <h3>[Page 3]</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Some highlights from each area. Precious memories encapsulated for everyone to see!
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img class="image_crop" src="images/fifth_1.jpeg" alt="image for page3">
+        <img class="image_crop" src="images/fourth_3.jpg" alt="image for page3">
+        <img class="image_crop" src="images/fourth_2.jpg" alt="image for page3">
+        <img class="image_crop" src="images/second_3.jpg" alt="image for page3">
+        <img class="image_crop" src="images/first_3.jpg" alt="image for page3">
+        <img class="image_crop" src="images/fifth_3.jpg" alt="image for page3">
+        <img class="image_crop" src="images/seventh_3.jpg" alt="image for page3">
+        <img class="image_crop" src="images/sixth_1.jpg" alt="image for page3">
+        <img class="image_crop" src="images/Sixth_3.jpg" alt="image for page3">
+        <img class="image_crop" src="images/first_2.jpg" alt="image for page3">
 
       </ul>
       <hr>
