modified pictures in site plan

--- a/personal/site-plan-personal.html
+++ b/personal/site-plan-personal.html
@@ -162,12 +162,12 @@
       <p>Images for the Page 3</p>
         <img class="image_crop" src="images/fifth_1.jpeg" alt="image for page3">
         <img class="image_crop" src="images/fourth_3.jpg" alt="image for page3">
-        <img class="image_crop" src="images/fourth_2.jpg" alt="image for page3">
+        <img class="image_crop" src="images/third_1.jpg" alt="image for page3">
         <img class="image_crop" src="images/second_3.jpg" alt="image for page3">
         <img class="image_crop" src="images/first_3.jpg" alt="image for page3">
         <img class="image_crop" src="images/fifth_3.jpg" alt="image for page3">
         <img class="image_crop" src="images/seventh_3.jpg" alt="image for page3">
-        <img class="image_crop" src="images/sixth_1.jpg" alt="image for page3">
+        <img class="image_crop" src="images/Sixth_1.jpg" alt="image for page3">
         <img class="image_crop" src="images/Sixth_3.jpg" alt="image for page3">
         <img class="image_crop" src="images/first_2.jpg" alt="image for page3">
 
