--- a/personal/site-plan-personal.html
+++ b/personal/site-plan-personal.html
@@ -181,21 +181,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        fill bullet points with a list of interesting things about my mission.
       </p>
-      <img src="#" alt="home page wireframe">
+      <img class="wireframe" src="images/home_wireframe.png" alt="home page wireframe">
 
       <h3>[Page 2]</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        add effects when mouse is hovered to one of the maps.
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img class="wireframe" src="images/2ndpage_wireframe.png" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        Arrows are buttons that change the picture shown.
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img class="wireframe" src="images/3rdpage_wireframe.png" alt="page 3 wireframe">
     </main>
   </body>
 
