--- a/personal/site-plan-personal.html
+++ b/personal/site-plan-personal.html
@@ -183,19 +183,19 @@
       <p>         
         fill bullet points with a list of interesting things about my mission.
       </p>
-      <img class="wireframe" src="images/home_wireframe.png" alt="home page wireframe">
+      <img src="images/home_wireframe.png" alt="home page wireframe">
 
       <h3>[Page 2]</h3>
       <p>         
         add effects when mouse is hovered to one of the maps.
       </p>
-      <img class="wireframe" src="images/2ndpage_wireframe.png" alt="page 2 wireframe">
+      <img src="images/2ndpage_wireframe.png" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
         Arrows are buttons that change the picture shown.
       </p>
-      <img class="wireframe" src="images/3rdpage_wireframe.png" alt="page 3 wireframe">
+      <img src="images/3rdpage_wireframe.png" alt="page 3 wireframe">
     </main>
   </body>
 
