Page 2 personal website

--- a/personal/page_2.html
+++ b/personal/page_2.html
@@ -19,43 +19,43 @@
                 <a href="contactus.html">Contact Us</a>
             </nav>
         </header>
-        <main>
-            <h1>Areas in my Mission</h1>
-            <section>
-                <img src="images/Olongapo.png">
-                <h2>Olongapo</h2>
+        <h1>Areas in my Mission</h1>
+        <main class="content2">
+            <section id="section2">
+                <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d123397.1931169635!2d120.26025039186993!3d14.872201200898134!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33967aaada4ab071%3A0x7234f49eeecafd9a!2sOlongapo%20City%2C%20Zambales%2C%20Philippines!5e0!3m2!1sen!2sus!4v1742868480091!5m2!1sen!2sus" width="350" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <h2>1st Area (6 Months)</h2>
             </section>
-            <section>
-                <img src="images/Lubao.png">
-                <h2>Lubao</h2>
+            <section id="section2">
+                <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d123382.5101937969!2d120.47334939243324!3d14.897852027871489!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33965eea12cf976f%3A0x92afee12a1d47006!2sLubao%2C%20Pampanga%2C%20Philippines!5e0!3m2!1sen!2sus!4v1742868561803!5m2!1sen!2sus" width="350" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <h2>2nd Area (6 Months)</h2>
             </section>
-            <section>
-                <img src="images/Castillejos.png">
-                <h2>Castillejos</h2>
+            <section id="section2">
+                <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d61682.68820164934!2d120.17779007344632!3d14.92773001297462!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x339679abb5710af9%3A0x9f256495b31d8cf6!2sCastillejos%2C%20Zambales%2C%20Philippines!5e0!3m2!1sen!2sus!4v1742868657467!5m2!1sen!2sus" width="350" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <h2>3rd Area (3 Months)</h2>
             </section>
-            <section>
-                <img src="images/Subic.png">
-                <h2>Subic</h2>
+            <section id="section2">
+                <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d246794.5889297758!2d120.10597559608307!3d14.872023997461847!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3396775ea9ab62d9%3A0x65dcd14425f56924!2sSubic%2C%20Zambales%2C%20Philippines!5e0!3m2!1sen!2sus!4v1742868691967!5m2!1sen!2sus" width="350" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <h2>4th Area (3 Months)</h2>
             </section>
-            <section>
-                <img src="images/Morong.png">
-                <h2>Morong</h2>
+            <section id="section2">
+                <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d123487.81092046888!2d120.25891793839331!3d14.712926094141944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33960c8e64904c93%3A0x6b7f229236cd39a7!2sMorong%2C%20Bataan%2C%20Philippines!5e0!3m2!1sen!2sus!4v1742868723155!5m2!1sen!2sus" width="350" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <h2>5th Area (3 Months)</h2>
             </section>
-            <section>
-                <img src="images/Cabangan.png">
-                <h2>Cabangan</h2>
+            <section id="section2">
+                <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d123223.64233182932!2d120.03065124852806!3d15.17268153190244!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3394299f173f92eb%3A0x3a664052e01dccdd!2sCabangan%2C%20Zambales%2C%20Philippines!5e0!3m2!1sen!2sus!4v1742868749749!5m2!1sen!2sus" width="350" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <h2>6th Area (6 Weeks)</h2>
             </section>
-            <section>
-                <img src="images/Masinloc.png">
-                <h2>Masinloc</h2>
+            <section class="last_card">
+                <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d123007.76938535139!2d119.97730760680938!3d15.538517056625471!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x339410951082da39%3A0x1e10c0a532968401!2sMasinloc%2C%20Zambales%2C%20Philippines!5e0!3m2!1sen!2sus!4v1742868772429!5m2!1sen!2sus" width="350" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <h2>7th Area (6 Weeks)</h2>
             </section>
         </main>
         <footer>
             <p>&copy; 2025 - Raphael Allen Martinez</p>
+            <p><a href="site-plan-personal.html">Site Plan</a></p>
             <a id="logo_link" href="index.html">   
                 <img class="logo" src="images/personal_logo.png" alt ="Mission Logo">
             </a> 
-            <p><a href="site-plan-personal.html">Site Plan</a></p>
             <p><a href="contactus.html">Contact Us</a></p>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
